k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnas
  labels:
    app.kubernetes.io/part-of: cnas-assignment
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
