k8s/07-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: cnas
  labels:
    app: php-app
    app.kubernetes.io/name: php-app
spec:
  selector:
    app: php-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
